# 1Lab_Polynom

./: CMakeLists.txt
include/: Monom.h  Polynom.h  PolynomBuilder.h  TList.h
parser/: CMakeLists.txt
parser/grammar/: Polynom.g4
samples/: CMakeLists.txt  sample.cpp
src/: Monom.cpp  Polynom.cpp  PolynomBuilder.cpp
test/: CMakeLists.txt  test_monom.cpp  test_polynom.cpp
